--- a/ToDoListWebMVC/Views/ToDoTasks/Create.cshtml
+++ b/ToDoListWebMVC/Views/ToDoTasks/Create.cshtml
@@ -1,8 +1,50 @@
-﻿@*
+﻿@model ToDoListWebMVC.Models.ToDoTask;
+
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
     ViewData["Title"] = "Create";
+    ViewData["Subtitle"] = "Task";
 }
 
 <h1>@ViewData["Title"]</h1>
+<h3>@ViewData["Subtitle"]</h3>
+
+<hr />
+
+<div class="row">
+    <div class="col-md-3">
+        <form asp-action="Create">
+            <div class="form-group">
+                <label asp-for="Title" class="form-label mt-4"></label>
+                <input asp-for="Title" class="form-control">
+                <span asp-validation-for="Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description" class="form-label mt-4"></label>
+                <input asp-for="Description" class="form-control">
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Date" class="form-label mt-4"></label>
+                <input asp-for="Date" class="form-control">
+                <span asp-validation-for="Date" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Time" class="form-label mt-4"></label>
+                <input asp-for="Time" class="form-control">
+                <span asp-validation-for="Time" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="mt-5 btn btn-primary">
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index" class="btn btn-light mt-3">Back</a>
+</div>
+
+
