--- a/ToDoListWebMVC/Views/ToDoTasks/Index.cshtml
+++ b/ToDoListWebMVC/Views/ToDoTasks/Index.cshtml
@@ -15,7 +15,7 @@
 
 <table class="table table-striped table-hover">
     <thead>
-        <tr class="table-light">
+        <tr class="table-primary">
             <th class="text-dark">
                 @Html.DisplayNameFor(model => model.Title)
             </th>
