--- a/ToDoListWebMVC/Views/ToDoTasks/Create.cshtml
+++ b/ToDoListWebMVC/Views/ToDoTasks/Create.cshtml
@@ -28,13 +28,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="form-label mt-4"></label>
-                <input asp-for="Date" class="form-control">
+                <input asp-for="Date" type="date" class="form-control">
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Time" class="form-label mt-4"></label>
-                <input asp-for="Time" class="form-control">
-                <span asp-validation-for="Time" class="text-danger"></span>
+                <input asp-for="Time" type="time" class="form-control">
+                <span asp-validation-for="Time" class="text-danger" style="white-space:nowrap"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="mt-5 btn btn-primary">
@@ -47,4 +47,9 @@
     <a asp-action="Index" class="btn btn-light mt-3">Back</a>
 </div>
 
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
 
