--- a/ToDoListWebMVC/Views/ToDoTasks/Edit.cshtml
+++ b/ToDoListWebMVC/Views/ToDoTasks/Edit.cshtml
@@ -16,6 +16,7 @@
 <div class="row">
     <div class="col-md-3">
         <form asp-action="Edit">
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Title" class="form-label mt-4"></label>
                 <input asp-for="Title" class="form-control">
